--- a/env.example
+++ b/env.example
@@ -1,5 +1,10 @@
-# Database
-MONGODB_URI=mongodb://localhost:27017/apeirona
+# Database - Supabase PostgreSQL
+# Get these from: Supabase Dashboard > Project Settings > Database
+DATABASE_URL="postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres?pgbouncer=true"
+DIRECT_URL="postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:5432/postgres"
+
+# Legacy MongoDB (not used with Supabase)
+# MONGODB_URI=mongodb://localhost:27017/apeirona
 
 # JWT
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
